--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
       type="text/css"
       media="screen"
     />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/maps/jquery-jvectormap-world-mill.js"></script>
     <link
       rel="stylesheet"
       href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"
